--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.2",
+    "@angular/animations": "^7.0.3",
+    "@angular/cdk": "^7.0.3",
     "@angular/common": "^7.0.2",
     "@angular/compiler": "^7.0.2",
     "@angular/core": "^7.0.2",
     "@angular/forms": "^7.0.2",
     "@angular/http": "^7.0.2",
+    "@angular/material": "^7.0.3",
     "@angular/platform-browser": "^7.0.2",
     "@angular/platform-browser-dynamic": "^7.0.2",
     "@angular/router": "^7.0.2",
     "core-js": "^2.4.1",
     "rxjs": "^6.3.3",
-    "zone.js": "^0.8.19",
-    "rxjs-compat": "^6.0.0-rc.0"
+    "rxjs-compat": "^6.0.0-rc.0",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
