--- a/angular.json
+++ b/angular.json
@@ -21,8 +21,9 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+                "src/styles-app-loading.scss",
+                "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+                "src/styles.css"
             ],
             "scripts": []
           },
